--- a/index.html
+++ b/index.html
@@ -2,9 +2,42 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Css</title>
+	<title>CSS Grid: Create Your First CSS Grid</title>
+	<link rel="stylesheet" href="1.css">
 </head>
 <body>
-	
+<!-- 	Turn any HTML element into a grid container by setting its display property to grid. This gives you the ability to use all the other properties associated with CSS Grid.
+
+Note
+In CSS Grid, the parent element is referred to as the container and its children are called items.
+
+
+Change the display of the div with the container class to grid. -->
+<style>
+  .d1{background:LightSkyBlue;}
+  .d2{background:LightSalmon;}
+  .d3{background:PaleTurquoise;}
+  .d4{background:LightPink;}
+  .d5{background:PaleGreen;}
+  
+  .container {
+    font-size: 40px;
+    width: 100%;
+    background: LightGray;
+    display:grid;
+    /* add your code below this line */
+    
+    
+    /* add your code above this line */
+  }
+</style>
+  
+<div class="container">
+  <div class="d1">1</div>
+  <div class="d2">2</div>
+  <div class="d3">3</div>
+  <div class="d4">4</div>
+  <div class="d5">5</div>
+</div>
 </body>
 </html>
