--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>CSS Grid: Create Your First CSS Grid</title>
+	<title>CSS Grid: Add Columns with grid-template-columns</title>
 	<link rel="stylesheet" href="1.css">
 </head>
 <body>
-<!-- 	Turn any HTML element into a grid container by setting its display property to grid. This gives you the ability to use all the other properties associated with CSS Grid.
+<!-- Simply creating a grid element doesn't get you very far. You need to define the structure of the grid as well. To add some columns to the grid, use the grid-template-columns property on a grid container as demonstrated below:
 
-Note
-In CSS Grid, the parent element is referred to as the container and its children are called items.
+.container {
+  display: grid;
+  grid-template-columns: 50px 50px;
+}
+This will give your grid two columns that are 50px wide each.
 
-
-Change the display of the div with the container class to grid. -->
+The number of parameters given to the grid-template-columns property indicates the number of columns in the grid, and the value of each parameter indicates the width of each column. -->
 <style>
   .d1{background:LightSkyBlue;}
   .d2{background:LightSalmon;}
@@ -24,10 +26,11 @@ Change the display of the div with the container class to grid. -->
     font-size: 40px;
     width: 100%;
     background: LightGray;
-    display:grid;
+    display: grid;
+  
     /* add your code below this line */
     
-    
+      grid-template-columns:100px 100px 100px;
     /* add your code above this line */
   }
 </style>
