--- a/index.html
+++ b/index.html
@@ -2,19 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>CSS Grid: Add Columns with grid-template-columns</title>
+	<title>CSS Grid: Add Rows with grid-template-rows</title>
 	<link rel="stylesheet" href="1.css">
 </head>
 <body>
-<!-- Simply creating a grid element doesn't get you very far. You need to define the structure of the grid as well. To add some columns to the grid, use the grid-template-columns property on a grid container as demonstrated below:
+<!-- The grid you created in the last challenge will set the number of rows automatically. To adjust the rows manually, use the grid-template-rows property in the same way you used grid-template-columns in previous challenge.
 
-.container {
-  display: grid;
-  grid-template-columns: 50px 50px;
-}
-This will give your grid two columns that are 50px wide each.
 
-The number of parameters given to the grid-template-columns property indicates the number of columns in the grid, and the value of each parameter indicates the width of each column. -->
+Add two rows to the grid that are 50px tall each. -->
 <style>
   .d1{background:LightSkyBlue;}
   .d2{background:LightSalmon;}
@@ -29,8 +24,9 @@ The number of parameters given to the grid-template-columns property indicates t
     display: grid;
   
     /* add your code below this line */
+      grid-template-columns: 100px 100px 100px;
+      grid-template-rows:50px 50px;
     
-      grid-template-columns:100px 100px 100px;
     /* add your code above this line */
   }
 </style>
