--- a/index.html
+++ b/index.html
@@ -2,17 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>CSS Grid: Create a Column Gap Using grid-column-gap</title>
+	<title>CSS Grid: Add Gaps Faster with grid-gap</title>
 	<link rel="stylesheet" href="1.css">
 </head>
 <body>
-<!-- So far in the grids you have created, the columns have all been tight up against each other. Sometimes you want a gap in between the columns. To add a gap between the columns, use the grid-column-gap property like this:
-
-grid-column-gap: 10px;
-This creates 10px of empty space between all of our columns.
-
-
-Give the columns in the grid a 20px gap. -->
+<!-- grid-gap is a shorthand property for grid-row-gap and grid-column-gap from the previous two challenges that's more convenient to use. If grid-gap has one value, it will create a gap between all rows and columns. However, if there are two values, it will use the first one to set the gap between the rows and the second value for the columns. -->
 <style>
   .d1{background:LightSkyBlue;}
   .d2{background:LightSalmon;}
@@ -29,12 +23,11 @@ Give the columns in the grid a 20px gap. -->
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     /* add your code below this line */
+    grid-gap:10px 20px
     
-    grid-column-gap:20px
     /* add your code above this line */
   }
 </style>
-  
 <div class="container">
   <div class="d1">1</div>
   <div class="d2">2</div>
