--- a/index.html
+++ b/index.html
@@ -1,18 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>CSS Grid: Add Gaps Faster with grid-gap</title>
+	<meta charset="UTF-8">CSS Grid: Use grid-column to Control SpacingCSS Grid: Add Gaps Faster with grid-gap</title>
 	<link rel="stylesheet" href="1.css">
 </head>
 <body>
-<!-- grid-gap is a shorthand property for grid-row-gap and grid-column-gap from the previous two challenges that's more convenient to use. If grid-gap has one value, it will create a gap between all rows and columns. However, if there are two values, it will use the first one to set the gap between the rows and the second value for the columns. -->
+<!-- Up to this point, all the properties that have been discussed are for grid containers. The grid-column property is the first one for use on the grid items themselves.
+
+The hypothetical horizontal and vertical lines that create the grid are referred to as lines. These lines are numbered starting with 1 at the top left corner of the grid and move right for columns and down for rows, counting upward.
+
+This is what the lines look like for a 3x3 grid:
+
+column lines1234row lines1234
+
+To control the amount of columns an item will consume, you can use the grid-column property in conjunction with the line numbers you want the item to start and stop at.
+
+Here's an example:
+
+grid-column: 1 / 3;
+This will make the item start at the first vertical line of the grid on the left and span to the 3rd line of the grid, consuming two columns.
+
+
+Make the item w ith the class item5 consume the last two columns of the grid.-->
 <style>
-  .d1{background:LightSkyBlue;}
-  .d2{background:LightSalmon;}
-  .d3{background:PaleTurquoise;}
-  .d4{background:LightPink;}
-  .d5{background:PaleGreen;}
+  .item1{background:LightSkyBlue;}
+  .item2{background:LightSalmon;}
+  .item3{background:PaleTurquoise;}
+  .item4{background:LightPink;}
+  
+  .item5 {
+    background: PaleGreen;
+    /* add your code below this line */
+ 
+    
+    /* add your code above this line */
+  }
   
   .container {
     font-size: 40px;
@@ -22,18 +44,18 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    /* add your code below this line */
-    grid-gap:10px 20px
-    
-    /* add your code above this line */
+    grid-gap: 10px;
+  }
+  .item5{
+    grid-column: 2/4;
   }
 </style>
+  
 <div class="container">
-  <div class="d1">1</div>
-  <div class="d2">2</div>
-  <div class="d3">3</div>
-  <div class="d4">4</div>
-  <div class="d5">5</div>
+  <div class="item1">1</div>
+  <div class="item2">2</div>
+  <div class="item3">3</div>
+  <div class="item4">4</div>
+  <div class="item5">5</div>
 </div>
-</body>
 </html>
