--- a/index.html
+++ b/index.html
@@ -1,28 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">CSS Grid: Use grid-column to Control SpacingCSS Grid: Add Gaps Faster with grid-gap</title>
+	<meta charset="UTF-8">CSS Grid: Use grid-row to Control Spacing</title>
 	<link rel="stylesheet" href="1.css">
 </head>
 <body>
-<!-- Up to this point, all the properties that have been discussed are for grid containers. The grid-column property is the first one for use on the grid items themselves.
-
-The hypothetical horizontal and vertical lines that create the grid are referred to as lines. These lines are numbered starting with 1 at the top left corner of the grid and move right for columns and down for rows, counting upward.
-
-This is what the lines look like for a 3x3 grid:
-
-column lines1234row lines1234
-
-To control the amount of columns an item will consume, you can use the grid-column property in conjunction with the line numbers you want the item to start and stop at.
-
-Here's an example:
-
-grid-column: 1 / 3;
-This will make the item start at the first vertical line of the grid on the left and span to the 3rd line of the grid, consuming two columns.
+	<!-- f course, you can make items consume multiple rows just like you can with columns. You define the horizontal lines you want an item to start and stop at using the grid-row property on a grid item.
 
 
-Make the item w ith the class item5 consume the last two columns of the grid.-->
-<style>
+	Make the element with the item5 class consume the last two rows. -->	
+	<style>
   .item1{background:LightSkyBlue;}
   .item2{background:LightSalmon;}
   .item3{background:PaleTurquoise;}
@@ -30,8 +17,9 @@ Make the item w ith the class item5 consume the last two columns of the grid.-->
   
   .item5 {
     background: PaleGreen;
+    grid-row: 2/4;
     /* add your code below this line */
- 
+    
     
     /* add your code above this line */
   }
@@ -46,9 +34,6 @@ Make the item w ith the class item5 consume the last two columns of the grid.-->
     grid-template-rows: 1fr 1fr 1fr;
     grid-gap: 10px;
   }
-  .item5{
-    grid-column: 2/4;
-  }
 </style>
   
 <div class="container">
@@ -58,4 +43,5 @@ Make the item w ith the class item5 consume the last two columns of the grid.-->
   <div class="item4">4</div>
   <div class="item5">5</div>
 </div>
+</body>
 </html>
