--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">CSS Grid: Use grid-row to Control Spacing</title>
+	<meta charset="UTF-8">CSS Grid: Align an Item Horizontally using justify-self</title>
 	<link rel="stylesheet" href="1.css">
 </head>
 <body>
