--- a/index.html
+++ b/index.html
@@ -1,26 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">CSS Grid: Align an Item Vertically using align-self</title>
+	<meta charset="UTF-8">CSS Grid: Align All Items Horizontally using justify-items</title>
 	<link rel="stylesheet" href="1.css">
 </head>
 <body>
-<!-- Just as you can align an item horizontally, there's a way to align an item vertically as well. To do this, you use the align-self property on an item. This property accepts all of the same values as justify-self from the last challenge.
+<!-- Sometimes you want all the items in your CSS Grid to share the same alignment. You can use the previously learned properties and align them individually, or you can align them all at once horizontally by using justify-items on your grid container. This property can accept all the same values you learned about in the previous two challenges, the difference being that it will move all the items in our grid to the desired alignment.
 
 
-Align the item with the class item3 vertically at the end. -->
+Use this property to center all our items horizontally. -->
 <style>
   .item1{background:LightSkyBlue;}
   .item2{background:LightSalmon;}
-  
-  .item3 {
-    background: PaleTurquoise;
-    /* add your code below this line */
-    
-    align-self:end;
-    /* add your code above this line */
-  }
-  
+  .item3{background:PaleTurquoise;}
   .item4{background:LightPink;}
   .item5{background:PaleGreen;}
   
@@ -33,6 +25,10 @@ Align the item with the class item3 vertically at the end. -->
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     grid-gap: 10px;
+    /* add your code below this line */
+    justify-items:center;
+    
+    /* add your code above this line */
   }
 </style>
   
